force-app/main/default/objects/Opportunity__c/Opportunity__c.object-meta.xml
<CustomObject>
    <description>Custom object to track potential engagements.</description>
    <label>Opportunity</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>