force-app/main/default/objects/Opportunity__c/fields/Accrued_Fee__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Fee__c</fullName>
    <description>Accrued Fee - This field is used for ERP</description>
    <label>Accrued Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>