force-app/main/default/objects/Opportunity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>This field is used for the purposes of filtering &apos;Active&apos; Opportunities on the Pipeline Management Page</description>
    <formula>/**stages to EXCLUDE**/
NOT(
  OR( 
    ISPICKVAL(Stage__c, &apos;Lost&apos;), 
    ISPICKVAL(Stage__c, &apos;Dead&apos;), 
    ISPICKVAL(Stage__c, &apos;On Hold&apos;), 
    AND(Converted_to_Engagement__c, 
        OR(ISPICKVAL(Stage__c, &apos;Verbally Engaged&apos;),ISPICKVAL(Stage__c, &apos;Engaged&apos;))
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for the purposes of filtering &apos;Active&apos; Opportunities on the Pipeline Management Page</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>