force-app/main/default/objects/Opportunity__c/fields/Active_and_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Active_and_On_Hold__c</fullName>
    <formula>/**stages to EXCLUDE**/
NOT(
  OR( 
    ISPICKVAL(Stage__c, &apos;Lost&apos;), 
    ISPICKVAL(Stage__c, &apos;Dead&apos;),  
    AND(Converted_to_Engagement__c, 
        OR(ISPICKVAL(Stage__c, &apos;Verbally Engaged&apos;),ISPICKVAL(Stage__c, &apos;Engaged&apos;))
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active &amp; On Hold</label>
    <type>Checkbox</type>
</CustomField>