force-app/main/default/objects/Opportunity__c/fields/Additional_Client__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client__c</fullName>
    <inlineHelpText>Is there more than one Client? If &apos;Yes,&apos; you will be prompted to add Additional Clients.</inlineHelpText>
    <label>Additional Client</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>