force-app/main/default/objects/Opportunity__c/fields/Additional_Subject__c.field-meta.xml
<CustomField>
    <fullName>Additional_Subject__c</fullName>
    <inlineHelpText>Is there more than one Subject? If &apos;Yes,&apos; you will be prompted to add Additional Subjects.</inlineHelpText>
    <label>Additional Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>