force-app/main/default/objects/Opportunity__c/fields/Allow_Deal_Team_Email_Group__c.field-meta.xml
<CustomField>
    <fullName>Allow_Deal_Team_Email_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Deal Team Email Group</label>
    <type>Checkbox</type>
</CustomField>