force-app/main/default/objects/Opportunity__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DND</fullName>
            </value>
            <value>
                <fullName>CONVERSION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>