force-app/main/default/objects/Opportunity__c/fields/Available_In_Expense_Application__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Expense_Application__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available In Expense Application</label>
    <type>Checkbox</type>
</CustomField>