force-app/main/default/objects/Opportunity__c/fields/Beneficial_Owner_Control_Person_form__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Control_Person_form__c</fullName>
    <description>Compliance has requested that the FinCEN mandated information identifying Beneficial Owner(s) and Control Person(s) form to be submitted when the Opportunity is converting to an Engagement.</description>
    <inlineHelpText>Engagements done through &apos;Cap, Inc.&apos; as the HL Entity, and the HL Client&apos;s ownership is not excluded from the CDD requirements (please see the Beneficial Owner &amp; Control Person form on the intranet), REQUIRE the completion of a form.</inlineHelpText>
    <label>Beneficial Owner &amp; Control Person form?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>