force-app/main/default/objects/Opportunity__c/fields/CA_Comments__c.field-meta.xml
<CustomField>
    <fullName>CA_Comments__c</fullName>
    <label>CA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>