force-app/main/default/objects/Opportunity__c/fields/CA_Received_by_Legal__c.field-meta.xml
<CustomField>
    <fullName>CA_Received_by_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Received by Legal?</label>
    <type>Checkbox</type>
</CustomField>