force-app/main/default/objects/Opportunity__c/fields/CapIQ_Id__c.field-meta.xml
<CustomField>
    <fullName>CapIQ_Id__c</fullName>
    <formula>CASESAFEID(Client__r.CapIQ_Company__c)</formula>
    <label>CapIQ Id</label>
    <type>Text</type>
</CustomField>