force-app/main/default/objects/Opportunity__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>Enter the city where the event will be held</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>