force-app/main/default/objects/Opportunity__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>Classification of the event for expense reporting purposes</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MKTG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>