force-app/main/default/objects/Opportunity__c/fields/Client_Description__c.field-meta.xml
<CustomField>
    <fullName>Client_Description__c</fullName>
    <inlineHelpText>Example: Company, First Lien Creditors, Unsecured Creditor Committee, Ad Hoc Group of Senior Unsecured Creditors, etc.</inlineHelpText>
    <label>Client Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>