force-app/main/default/objects/Opportunity__c/fields/Client_MN_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_MN_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; Client__r.Id, Client__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>