force-app/main/default/objects/Opportunity__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <formula>CASESAFEID(Client__r.Id)</formula>
    <label>ClientId</label>
    <type>Text</type>
</CustomField>