force-app/main/default/objects/Opportunity__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>This field is used to determine whether an opportunity is open for the purposes of populating  the Share Open Opp? field on Relationships</description>
    <formula>OR(
ISPICKVAL(Stage__c, &apos;Lost&apos;),
ISPICKVAL(Stage__c, &apos;Verbally Engaged&apos;),
ISPICKVAL(Stage__c, &apos;Dead&apos;),
ISPICKVAL(Stage__c, &apos;Engaged&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to determine whether an opportunity is open for the purposes of populating  the Share Open Opp? field on Relationships</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>