force-app/main/default/objects/Opportunity__c/fields/Co_exist__c.field-meta.xml
<CustomField>
    <fullName>Co_exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-exist</label>
    <type>Checkbox</type>
</CustomField>