force-app/main/default/objects/Opportunity__c/fields/CompanyEUSecurities__c.field-meta.xml
<CustomField>
    <fullName>CompanyEUSecurities__c</fullName>
    <description>This field is not applicable to deals with Job Type = Creditor Advisor and should be populated with N/A, otherwise, a yes or no is needed in this field.</description>
    <inlineHelpText>For Creditor, use N/A. 
Does the debtor/issuer have any securities or other financial instruments that are admitted/pending to trade on any EU regulated market or any multi-lateral trading facility in the EU?</inlineHelpText>
    <label>Does the Company have EU Securities?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>