force-app/main/default/objects/Opportunity__c/fields/Completed_Additional_Client__c.field-meta.xml
<CustomField>
    <fullName>Completed_Additional_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Additional Client</label>
    <type>Checkbox</type>
</CustomField>