force-app/main/default/objects/Opportunity__c/fields/Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement__c</fullName>
    <label>Confidentiality Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, separate signed agreement</fullName>
            </value>
            <value>
                <fullName>Yes, incorporated into Engagement Letter</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>