force-app/main/default/objects/Opportunity__c/fields/Conflicts_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conflicts Bypass</label>
    <type>Checkbox</type>
</CustomField>