force-app/main/default/objects/Opportunity__c/fields/Conflicts_Check__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check__c</fullName>
    <label>Conflicts Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>