force-app/main/default/objects/Opportunity__c/fields/Conflicts_Check_Current_Processor__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Current_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Processor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select HL Internal employee</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Conflicts Check Current Processor)</relationshipLabel>
    <relationshipName>OpportunityCCCurrentProcessor</relationshipName>
    <type>Lookup</type>
</CustomField>