force-app/main/default/objects/Opportunity__c/fields/Conflicts_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Number__c</fullName>
    <label>Conflicts Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>