force-app/main/default/objects/Opportunity__c/fields/Conflicts_Check_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>No Resolution Required</fullName>
            </value>
            <value>
                <fullName>True Conflict</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>