force-app/main/default/objects/Opportunity__c/fields/Conflicts_Check_Perform_Date__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Check_Perform_Date__c</fullName>
    <label>Perform Date</label>
    <type>Date</type>
</CustomField>