force-app/main/default/objects/Opportunity__c/fields/Conflicts_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_Outcome__c</fullName>
    <formula>IF(
((ISPICKVAL(Conflicts_Check_Outcome__c, &apos;Managed&apos;) || ISPICKVAL(Conflicts_Check_Outcome__c, &apos;Cleared&apos;)) &amp;&amp;
(TODAY() - Conflicts_Check_Outcome_Date__c &lt; 30)) || Conflicts_Bypass__c,
TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conflicts Outcome</label>
    <type>Checkbox</type>
</CustomField>