force-app/main/default/objects/Opportunity__c/fields/Contingent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Fee__c</fullName>
    <label>Contingent Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>