force-app/main/default/objects/Opportunity__c/fields/Converted_to_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked when an opportunity is converted into an engagement.  Validation rules on the conversion to Engagement should, in addition to their execution logic, check if this box is checked.</description>
    <label>Converted to Engagement</label>
    <type>Checkbox</type>
</CustomField>