force-app/main/default/objects/Opportunity__c/fields/Created_Date_Display__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Display__c</fullName>
    <description>Used to display the Date only Portion of the CreatedDate field and still adhere to Localication</description>
    <formula>CreatedDate</formula>
    <label>Created Date Display</label>
    <type>Date</type>
</CustomField>