force-app/main/default/objects/Opportunity__c/fields/Date_CA_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_CA_Signed__c</fullName>
    <label>Date CA Signed</label>
    <type>Date</type>
</CustomField>