force-app/main/default/objects/Opportunity__c/fields/Date_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Date_Engaged__c</fullName>
    <inlineHelpText>Date on Engagement Letter</inlineHelpText>
    <label>Date Engaged</label>
    <type>Date</type>
</CustomField>