force-app/main/default/objects/Opportunity__c/fields/Default_VAT_Treatment_on_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Default_VAT_Treatment_on_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default VAT Treatment on Engagement</label>
    <type>Checkbox</type>
</CustomField>