force-app/main/default/objects/Opportunity__c/fields/DND_Status__c.field-meta.xml
<CustomField>
    <fullName>DND_Status__c</fullName>
    <label>DND Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add Requested</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>Removal Requested</fullName>
            </value>
            <value>
                <fullName>RELEASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>