force-app/main/default/objects/Opportunity__c/fields/DND_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>DND_Submitter_Email__c</fullName>
    <label>DND Submitter Email</label>
    <type>Email</type>
</CustomField>