force-app/main/default/objects/Opportunity__c/fields/EBITDA_MM__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_MM__c</fullName>
    <formula>IF(
 RecordType.DeveloperName = &apos;CF&apos; &amp;&amp;   ISPICKVAL(Job_Type__c, &apos;Buyside&apos;),  Subject__r.Recent_EBITDA_MM__c ,
IF(
NOT(ISNULL(Client__r.Recent_EBITDA_MM__c )), Client__r.Recent_EBITDA_MM__c , Subject__r.Recent_EBITDA_MM__c ))</formula>
    <label>EBITDA (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>