force-app/main/default/objects/Opportunity__c/fields/EnforceEBITDA__c.field-meta.xml
<CustomField>
    <fullName>EnforceEBITDA__c</fullName>
    <description>Added this field and will use it in the &quot;Request Engagement&quot; requirements check in around whether the EBITDA field is null.</description>
    <formula>IF(
OR (ISNULL(EBITDA_MM__c) ,  ISBLANK(EBITDA_MM__c)),
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enforce EBITDA</label>
    <type>Checkbox</type>
</CustomField>