force-app/main/default/objects/Opportunity__c/fields/Engagement_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Approval_Status__c</fullName>
    <label>Engagement Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Requesting Engagement Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>