force-app/main/default/objects/Opportunity__c/fields/Engagement_Team_Assembled__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Team_Assembled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engagement Team Assembled</label>
    <type>Checkbox</type>
</CustomField>