force-app/main/default/objects/Opportunity__c/fields/ERP_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ERP_Business_Unit__c</fullName>
    <label>ERP Business Unit</label>
    <length>60</length>
    <type>Text</type>
</CustomField>