force-app/main/default/objects/Opportunity__c/fields/ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_ID__c</fullName>
    <description>Id in the financial application</description>
    <label>ERP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>