force-app/main/default/objects/Opportunity__c/fields/ERP_Last_Integration_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Code__c</fullName>
    <description>The last error code from the integration with the financial application</description>
    <label>ERP Last Integration Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>