force-app/main/default/objects/Opportunity__c/fields/ERP_Last_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Error_Description__c</fullName>
    <description>The description of the last error in the integration with the financial application</description>
    <label>ERP Last Integration Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>