force-app/main/default/objects/Opportunity__c/fields/ERP_Last_Integration_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Integration_Response_Date__c</fullName>
    <description>The date/time of the last integration response</description>
    <label>ERP Last Integration Response Date</label>
    <type>DateTime</type>
</CustomField>