force-app/main/default/objects/Opportunity__c/fields/ERP_Legal_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Legal_Entity_Id__c</fullName>
    <description>ERP Legal Entity Id - It&apos;s an Id of Legal Entity referring from Legal Entity Object and populating values through Process builder</description>
    <inlineHelpText>Id of Legal Entity referring from Legal Entity Object</inlineHelpText>
    <label>ERP Legal Entity Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>