force-app/main/default/objects/Opportunity__c/fields/ERP_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Type__c</fullName>
    <label>ERP Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>