force-app/main/default/objects/Opportunity__c/fields/ERP_Product_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Product_Type_Code__c</fullName>
    <label>ERP Product Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>