force-app/main/default/objects/Opportunity__c/fields/ERP_Project_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Manager_ID__c</fullName>
    <label>ERP Project Manager ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>