force-app/main/default/objects/Opportunity__c/fields/ERP_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Name__c</fullName>
    <formula>Name  &amp; &quot; &quot; &amp; &quot; &quot; &amp;  Opportunity_Number__c &amp; TEXT(Opportunity_Number_Suffix__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Project Name</label>
    <type>Text</type>
</CustomField>