force-app/main/default/objects/Opportunity__c/fields/ERP_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Number__c</fullName>
    <formula>Opportunity_Number__c +  TEXT(Opportunity_Number_Suffix__c)</formula>
    <label>ERP Project Number</label>
    <type>Text</type>
</CustomField>