force-app/main/default/objects/Opportunity__c/fields/ERP_Project_Principal__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Principal__c</fullName>
    <label>ERP Project Principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>