force-app/main/default/objects/Opportunity__c/fields/ERP_Project_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Status_Code__c</fullName>
    <description>ERP Project Status Code</description>
    <formula>CASE( Status__c ,
&apos;Engaged&apos;,&apos;300000002781084&apos;,
&apos;300000002781085&apos;)</formula>
    <label>ERP Project Status Code</label>
    <type>Text</type>
</CustomField>