force-app/main/default/objects/Opportunity__c/fields/ERP_Revenue_Method__c.field-meta.xml
<CustomField>
    <fullName>ERP_Revenue_Method__c</fullName>
    <label>ERP Revenue Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Complete</fullName>
            </value>
            <value>
                <fullName>2 No Revenue</fullName>
            </value>
            <value>
                <fullName>3 Over Time</fullName>
            </value>
            <value>
                <fullName>4 Point In Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>